feat: support importing character configurations